--- a/local_temp/docker/multipleLanguage/Dockerfile
+++ b/local_temp/docker/multipleLanguage/Dockerfile
@@ -1,4 +1,4 @@
-FROM harbor-test.haier.net/s02154/mtranserver-core:v1
+FROM docker.cnb.cool/aalivexy/translation-service:latest
 # FROM docker.xuanyuan.me/xnuo/mtranserver:2.1.0
 # docker.1ms.run/xnuo/mtranserver:2.1.0
 # FROM docker.1ms.run/xnuo/mtranserver:latest
