--- a/local_temp/docker/multipleLanguage/compose.yml
+++ b/local_temp/docker/multipleLanguage/compose.yml
@@ -1,10 +1,11 @@
 services:
   translation-service:
-    image: docker.cnb.cool/aalivexy/translation-service:latest
+    # image: docker.cnb.cool/aalivexy/translation-service:latest
+    build: .
     ports:
-      - "3000:3000"
+      - "6000:3000"
     environment:
-      API_KEY: "" # 可选，设置为空字符串则不启用 API 密钥保护
+      API_KEY: ""  # 可选，设置为空字符串则不启用 API 密钥保护
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "/bin/sh", "-c", "echo -e 'GET /health HTTP/1.1\r\nHost: localhost:3000\r\n\r\n' | timeout 5 bash -c 'cat > /dev/tcp/localhost/3000' && echo 'Health check passed'"]
